--- a/index.html
+++ b/index.html
@@ -1,42 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="/manifest.webmanifest">
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="logo.jpg" type="image/jpg">
-  <meta name="theme-color" content="red" />
-  <!--<script
-  async
-  src="https://unpkg.com/pwacompat"
-  crossorigin="anonymous"></script>-->
-
-  <title>Weather</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WeatherApp</title>
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="logo.jpg" type="logo/jpg">
+  <meta name="theme-color" content="rgb(4, 223, 223)" />
 </head>
-<body id ="container">
-  <div>
-    <header class="text-center">
-      <h1>Weather</h1>
-    </header>
-    <main>
-      <div class="row">
-        <form class="col-sm-8 offset-sm-2" id="city-form">
-          <div class="form-group">
-            <label for="city">Enter your city</label>
-            <input type="text" id="city" class="form-control" required>
-          </div>
-          <button class="btn btn-success" type="submit">Check the weather!</button>
-        </form>
-      </div>
-      <div class="row">
-        <p id="weather-report" class="col-sm-8 offset-sm-2 text-center">
-        </p>
-      </div>
-    </main>
-    <aside></aside>
-  </div>
-  <script src="main.js"></script>
+<body>
+    <section class="top-banner">
+        <div class="container">
+          <h1 class="heading">WeatherCheck</h1>
+          <form>
+            <input type="text" placeholder="enter your city" autofocus>
+            <button type="submit">Check the Weather</button>
+            <p id="text"></p>
+            <span class="msg"></span>
+          </form>
+        </div>
+      </section>
+      <section class="ajax-section">
+      
+        <div class="container">
+          <ul class="cities"></ul>
+        </div>
+        <p id="text"></p>
+      </section>
+      <footer class="page-footer">
+        <div class="container">
+          <p>Made with Js By Isaac</p>
+        </div>
+      </footer>
+      <script src="main.js"></script>
 </body>
 </html>
